--- a/Makefile.serveur
+++ b/Makefile.serveur
@@ -6,7 +6,7 @@
 #    By: rabougue <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/12/10 19:16:51 by rabougue          #+#    #+#              #
-#    Updated: 2017/11/05 05:22:51 by rabougue         ###   ########.fr        #
+#    Updated: 2017/11/06 00:28:01 by rabougue         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,15 +15,17 @@ NAME	= serveur
 CC		= clang
 FLAG	= -Weverything
 LFT		= ./libft/libft.a
-SRCS	= ./source/source_server/main.c\
-			./source/error.c
+SRCS	=	./source/source_server/main.c\
+			./source/source_server/server.c\
+			./source/error.c\
+			./source/port.c
 
 OBJS	= $(SRCS:.c=.o)
 
 INCLUDE	= -I ./include \
 		  -I ./libft
 ###########################_RELINK_MODIFY_.h####################################
-RELINK = ./include/common.h
+RELINK = ./include/common.h ./include/client.h ./include/server.h
 ################################################################################
 
 all: $(NAME)
