--- a/Makefile.serveur
+++ b/Makefile.serveur
@@ -13,7 +13,7 @@
 ##################################_COMPILATION_#################################
 NAME	= serveur
 CC		= clang
-FLAG	= -std="c99" -Weverything
+FLAG	= -Weverything
 LFT		= ./libft/libft.a
 SRCS	=	./source/source_server/main.c\
 			./source/source_server/server.c\
