--- a/Makefile.client
+++ b/Makefile.client
@@ -6,7 +6,7 @@
 #    By: rabougue <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/12/10 19:16:51 by rabougue          #+#    #+#              #
-#    Updated: 2017/11/06 00:28:31 by rabougue         ###   ########.fr        #
+#    Updated: 2017/11/24 04:44:32 by rabougue         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,6 +18,9 @@ LFT		= ./libft/libft.a
 SRCS	=	./source/source_client/main.c\
 			./source/source_client/setup.c\
 			./source/source_client/client.c\
+			./source/source_client/cmd.c\
+			./source/source_client/exec.c\
+			./source/source_client/put_get.c\
 			./source/error.c\
 			./source/common.c\
 			./source/port.c
